syntax = "proto3";



message BaudRate {

    enum Rate {
        K1000 = 0;
        K800 = 1;
        K500 = 2;
        K250 = 3;
        K125 = 4;
        K100 = 5;
        K83 = 6;
        K50 = 7;
        K20 = 8;
        AUTO = 9;
    }
    Rate rate = 1;
}

message Frame {
    enum IDE {
        STD = 0;
        EXT = 4;
    }
    enum RTR {
        DATA = 0;
        REMOTE = 2;
    }
    uint32 id = 1;
    uint32 eid = 2;
    uint32 dlc = 3;
    IDE ide = 4;
    RTR rtr = 5;
    uint64 data = 6;
}

message ToDevice {
    enum MessageType {
        SEND_FRAME = 0;
        INIT = 1;
        DEINIT = 2;
        SET_FILTER = 3;
        SET_BAUDRATE = 4;
        GET_STATUS = 5;
    }

    MessageType type = 1;
    uint32 id = 2;
    Frame frame = 3;
    BaudRate baudRate = 4;
}

message Response {
    bool ok = 1;
    string error = 2;
}

message Status {
    BaudRate.Rate rate = 1;
}


message FromDevice {
    enum MessageType {
        GET_FRAME = 0;
        STATUS = 1;
        RESPONSE = 2;
    }
    MessageType type = 1;
    uint32 id = 2;
    Frame frame = 3;
    Response response = 4;
    Status status = 5;


}
